task/SFD-3359 External api post code mapping changes